--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -20,7 +20,7 @@
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 
         <div class="drop-content" id="collapseExample">
-          <a *ngIf="viewCompanyInfo" href="javascript:void(0)" [routerLink]="['/admin/company',0]"    id="collapseExample">Company Info</a>
+          <a *ngIf="viewCompanyInfo" href="javascript:void(0)" [routerLink]="['/admin/company',0]"    id="collapseExample">Add Company</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/companyList']"  id="collapseExample">Company List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/userList']"     id="collapseExample">User List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/loginHistory']" id="collapseExample">Login History</a>
@@ -33,7 +33,7 @@
 
         <div class="drop-content" id="collapseExample">
           <a href="javascript:void(0)" [routerLink]="['/admin/productManageAssign']" id="collapseExample">Product Manage</a>
-          <a href="javascript:void(0)" [routerLink]="['/admin/productMasterAssign']" id="collapseExample">Product Master</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/productMasterAssign']" id="collapseExample">Product Add</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/addTypeAssign']"     id="collapseExample">Add Manager</a>
         </div>
 
