--- a/web/src/app/common/login.component.html
+++ b/web/src/app/common/login.component.html
@@ -26,8 +26,10 @@
               </div>
               <p class="text-light"> Please enter your login and password!</p>
               <input matInput type="text" name="LoginName" placeholder="LoginName" [(ngModel)]="data.LoginName" required>
-              <input matInput type="password" name="Password" placeholder="Password" [(ngModel)]="data.Password"
-                required>
+              <div>
+              <input #x  matInput type="password" name="Password" placeholder="Password" [(ngModel)]="data.Password"required>
+              <mat-icon class="key"  (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
+            </div>
               <a class="forgot text-light" href="#">Forgot password?</a>
               <br>
               <button class="logibtn" >Login</button>
