--- a/web/src/app/product/product-manage/product-manage.component.html
+++ b/web/src/app/product/product-manage/product-manage.component.html
@@ -57,7 +57,7 @@
                                     <mat-icon class="col-white plus_icon" (click)="showAdd = !showAdd;">add</mat-icon>
                                     <mat-icon class="delete_icon me-2 ms-2" disabled="selectedProduct === ''"
                                         (click)="deleteProductType()">delete_forever</mat-icon>
-                                    <mat-icon class="edit_icon"  (click)="openModal(content,selectedProduct,selectedHSNCode,selectedGSTPercentage,selectedGSTType)"  (click)="getfieldList()">edit
+                                    <mat-icon class="edit_icon"  (click)="openModal(content,selectedProduct,selectedHSNCode,selectedGSTPercentage,selectedGSTType)" >edit
                                     </mat-icon>
                                 </div>
                             </div>
