--- a/web/src/app/admin/add-type/add-type.component.html
+++ b/web/src/app/admin/add-type/add-type.component.html
@@ -7,7 +7,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Add Type Master</h2>
+                        <h2>Add Manager</h2>
                         <ul class="header-dropdown m-r--5"> </ul>
                     </div>
                     <div class="body">
