--- a/web/src/app/admin/product-master/product-master.component.html
+++ b/web/src/app/admin/product-master/product-master.component.html
@@ -7,7 +7,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Product Master</h2>
+                        <h2>Product Add</h2>
                         <ul class="header-dropdown m-r--5"> </ul>
                     </div>
                     <div class="body">
@@ -44,12 +44,14 @@
                                                 {{spec.FieldName}} is Required
                                             </mat-error>
                                         </mat-form-field>
+                                        
                                         <mat-form-field  *ngIf="spec.DisplayAdd === 1" >
                                             <mat-label>Add {{spec.FieldName}}</mat-label>
                                             <input matInput name="{{spec.FieldName}}" [(ngModel)]="spec.SelectedValue"
                                                 required
                                                 #NewProductTypecontrol>
                                         </mat-form-field>
+                                        
                                         <mat-icon class="col-white plus_icon" *ngIf="spec.DisplayAdd === 0"  (click)="displayAddField(i)">add</mat-icon>
                                         <mat-icon class="delete_icon me-2 ms-2" *ngIf="spec.DisplayAdd === 0" (click)="deleteSpecValue(spec, spec.SelectedValue, i)">delete_forever</mat-icon>
                                         <button mat-mini-fab color="primary" *ngIf="spec.DisplayAdd === 1" (click)="saveFieldData(i)"
