--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -23,6 +23,7 @@
           <a *ngIf="viewCompanyInfo" href="javascript:void(0)" [routerLink]="['/admin/company',0]"    id="collapseExample">Add Company</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/companyList']"  id="collapseExample">Company List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/userList']"     id="collapseExample">User List</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/deactiveList']"     id="collapseExample">Deactive List</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/loginHistory']" id="collapseExample">Login History</a>
         </div>
         
