--- a/web/src/app/common/login.component.html
+++ b/web/src/app/common/login.component.html
@@ -28,7 +28,7 @@
               <input matInput type="text" name="LoginName" placeholder="LoginName" [(ngModel)]="data.LoginName" required>
               <div>
               <input #x  matInput type="password" name="Password" placeholder="Password" [(ngModel)]="data.Password"required>
-              <mat-icon class="key"  (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
+              <mat-icon class="key mt-1"  (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
             </div>
               <a class="forgot text-light" href="#">Forgot password?</a>
               <br>
