--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -140,6 +140,26 @@ $OguruPro-theme: mat.define-light-theme((
     font-size: 23px;
 
 }
+
+.sync_disabled{
+    background: #ff5100;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 23px;
+    height: 30px !important;
+    width: 30px !important;
+    cursor: pointer;
+    transition: .5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+.sync_disabled:hover{
+    color: #ff5100 !important;
+    background: #ffffff;
+    font-size: 23px;
+}
+
 .edit_icon{
     background: #393497e8;
     color: #fff;
@@ -179,6 +199,24 @@ $OguruPro-theme: mat.define-light-theme((
    
     color: #38a042e8 !important;
     background: #ffffff;
+    font-size: 23px;
+
+}
+
+.fa-file-excel-o{
+    
+    color: #458f37;
+  
+    font-size: 22px !important;
+    height: 30px !important;
+    width: 30px !important;
+    transition: .5s;
+    cursor: pointer;
+   
+}
+.fa-file-excel-o:hover{
+   
+    color: #458f37 !important;
     font-size: 23px;
 
 }
