--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -250,7 +250,7 @@
                                     </span>
                                 </i>
                                 <input #fileInput id="my-input" name='PhotoURL' type="file"
-                                    [(ngModel)]="data.PhotoURL" (change)="uploadImage($event, 'company')"
+                                    (change)="uploadImage($event, 'company')"
                                     style="display:none;">
                             </div>
                         </div>
