--- a/web/src/app/sale/doctor/doctor.component.html
+++ b/web/src/app/sale/doctor/doctor.component.html
@@ -205,7 +205,7 @@
                                                 </span>
                                             </i>
                                             <input #fileInput id="my-input" name='PhotoURL' type="file"
-                                                [(ngModel)]="data.PhotoURL" (change)="uploadImage($event, 'company')"
+                                                 (change)="uploadImage($event, 'company')"
                                                 style="display:none;">
                                         </div>
                                     </div>
