excel all list apply

--- a/web/src/app/admin/company.component.html
+++ b/web/src/app/admin/company.component.html
@@ -50,7 +50,7 @@
                                                 <mat-label>Email</mat-label>
                                                 <input matInput name="Email1" [(ngModel)]="data.Email"
                                                     
-                                                    required #Emailcontrol [disabled]="user?.data?.UserGroup === 'SuperAdmin' || id !== 0">
+                                                    required #Emailcontrol [disabled]=" id != 0">
                                                 <mat-error>
                                                     Invalid Email Id
                                                 </mat-error>
@@ -253,7 +253,7 @@
                                     <div class="col-md-10 col-12">
                                         <div class="row">
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 pt-3">
-                                                <mat-slide-toggle name="Checked" class="example-margin" [color]="color"
+                                                <mat-slide-toggle name="Checked" class="example-margin" 
                                                     [checked]="toggleChecked" (change)="copyData($event.checked)"
                                                     [disabled]="false" #CompanyIDcontrol>
                                                     Copy Data
