--- a/web/src/app/admin/shop-list/shop-list.component.html
+++ b/web/src/app/admin/shop-list/shop-list.component.html
@@ -7,7 +7,7 @@
             <div class="header p-2 py-0 pt-1">
               <div class="row">
                 <div class="col-md-1 col-8 p-0 ms-3">
-                    <h2>Shop List </h2>
+                    <h2>Shop List <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSX()"></i> </h2>  
                 </div>
                 <div class="col-md-2 col-1 ps-md-0 ps-1">
                     <select class=" form-control"
