--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -6,8 +6,11 @@
                 <div class="card">
                     <div class="header p-0 py-0 pt-1">
                         <div class="row">
-                            <div class="col-md-1 col-8 p-0 ms-3">
-                                <h2>Supplier List  </h2>
+                            <div class="col-md-1 col-6 p-0 ms-3">
+                                <h2>Suppliers List  </h2>
+                            </div>
+                            <div class="ps-md-0 ps-0 pt-1" style="width: 40px;">
+                                <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSX()"></i>
                             </div>
                             <div class="col-md-2 col-1 ps-md-0 ps-1">
                                 <select class=" form-control"
