--- a/web/src/app/sale/doctor-list/doctor-list.component.html
+++ b/web/src/app/sale/doctor-list/doctor-list.component.html
@@ -7,11 +7,11 @@
               <div class="header p-2 py-0 pt-1">
                 <div class="row">
                   <div class="col-md-1 col-12 p-0 ms-3">
-                    <h2>Doctor List
-                      
-                    </h2>
-                      
+                    <h2>Doctor's List </h2>
                   </div>
+                  <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
+                    <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSX()"></i>
+                </div>
                   <div  class="col-md-2 col-1 ps-md-0 ps-1">
                       <select class=" form-control"
                           style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
