--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -49,6 +49,121 @@ $OguruPro-theme: mat.define-light-theme((
     background-color: rgba(89, 89, 89, 0.549) !important;
 }
 
+.table>thead {
+    background: #e2e2e2;
+    color: #000;
+}
+
+.table thead tr th {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+    color: #000 !important;
+    font-weight: bolder;
+    font-size: 14px;
+    text-align: center;
+    vertical-align: text-top;
+}
+
+ .table tbody tr td {
+    font-size: 12px !important;
+    }
+
+    thead  {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        z-index: 2;
+        vertical-align: top;   
+    }
+    
+    thead [scope=row] {
+        position: -webkit-sticky;
+        position: sticky;
+        left: 0;
+        z-index: 1;
+    }
+    
+    thead [scope=row] {
+        vertical-align: top;
+        color: inherit;
+    }
+    
+    thead :not([scope=row]):first-child {
+        left: 0;
+        z-index: 3;
+        vertical-align: top;
+    }
+
+    .page-link {
+        border-radius: 20px;
+    }
+
+    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+        color: #ffffff !important;
+        background-color: #ff5100 !important;
+        border-color: var(--bs-nav-tabs-link-active-border-color);
+    }
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($OguruPro-theme);
+
+/* You can add global styles to this file, and also import other style files */
+
+.card{
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 10px;
+}
+.content{
+    background-image: url(assets/images/SHOP.svg);
+    background-size: 100%;
+}
+
+.card_TBL{
+    margin-top: 10px;
+}
+.header{
+    height: 30px;
+    color: rgb(255, 81, 0)
+}
+
+.blue{
+    background-color: rgb(25, 19, 80);
+}
+
+.og{
+    background-color: rgb(255, 81, 0);
+}
+
+.container-fluid {
+    min-height: 92vh;
+}
+
+.allcard {
+    margin-top: 20px;
+    margin-bottom: 0px;
+    height: 100% !important;
+    background-color: #ffffff !important;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.bc{
+    height: 93vh !important;
+    background-color: #e3e3e3 !important;
+}
+
+// icon manual desing in css
+.upload_icon {
+    font-size: 20px;
+    color: #ffffff;
+    background: #ff5100;
+    width: 171px;
+    padding-top: 2px;
+    height: 25px;
+    padding-left: 4px;
+}
 
 .btn_icon{
     background: none;
@@ -73,12 +188,11 @@ $OguruPro-theme: mat.define-light-theme((
     box-shadow: 2px 2px 6px #9c9795fa; 
     font-weight: 900; 
 }
+
 .plus_icon:hover{
-   
     color: #615be7 !important;
     background: #ffffff;
     font-size: 23px;
-
 }
 
 .save_icon{
@@ -113,12 +227,11 @@ $OguruPro-theme: mat.define-light-theme((
     transition: .5s;
     box-shadow: 2px 2px 6px #9c9795fa;
 }
+
 .delete_icon:hover{
-   
     color: #ff0000 !important;
     background: #ffffff;
     font-size: 23px;
-
 }
 
 .swap_icon{
@@ -133,12 +246,11 @@ $OguruPro-theme: mat.define-light-theme((
     transition: .5s;
     box-shadow: 2px 2px 6px #9c9795fa;
 }
+
 .swap_icon:hover{
-   
     color: #38a042e8 !important;
     background: #ffffff;
     font-size: 23px;
-
 }
 
 .sync_disabled{
@@ -170,16 +282,13 @@ $OguruPro-theme: mat.define-light-theme((
     width: 30px !important;
     transition: .5s;
     cursor: pointer;
-
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
 .edit_icon:hover{
-   
     color: #393497e8 !important;
     background: #ffffff;
     font-size: 23px;
-
 }
 
 .detail_icon i{
@@ -196,29 +305,23 @@ $OguruPro-theme: mat.define-light-theme((
 }
 
 .detail_icon i:hover{
-   
     color: #38a042e8 !important;
     background: #ffffff;
     font-size: 23px;
-
 }
 
 .fa-file-excel-o{
-    
     color: #458f37;
-  
     font-size: 22px !important;
     height: 30px !important;
     width: 30px !important;
     transition: .5s;
     cursor: pointer;
-   
 }
+
 .fa-file-excel-o:hover{
-   
     color: #458f37 !important;
     font-size: 23px;
-
 }
 
 .SelectYourShop{
@@ -239,126 +342,10 @@ $OguruPro-theme: mat.define-light-theme((
 
 .logoutBtn:hover{
     color: rgb(228, 30, 30); 
-
 }
+// icon manual desing in css end
 
-.table>thead {
- 
-    background: #e2e2e2;
-    color: #000;
-}
-
-.table thead tr th {
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-    color: #000 !important;
-    font-weight: bolder;
-    font-size: 14px;
-    text-align: center;
-    vertical-align: text-top;
-}
-
- .table tbody tr td {
-
-    font-size: 12px !important;
-    }
-    thead  {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-        z-index: 2;
-        vertical-align: top;
-        
-    }
-    
-    thead [scope=row] {
-        position: -webkit-sticky;
-        position: sticky;
-        left: 0;
-        z-index: 1;
-    }
-    
-    thead [scope=row] {
-        vertical-align: top;
-        color: inherit;
-    }
-    
-    thead :not([scope=row]):first-child {
-        left: 0;
-        z-index: 3;
-        vertical-align: top;
-    }
-
-    .page-link {
-    
-        border-radius: 20px;
-    }
-
-    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-        color: #ffffff !important;
-        background-color: #ff5100 !important;
-        border-color: var(--bs-nav-tabs-link-active-border-color);
-    }
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($OguruPro-theme);
-
-/* You can add global styles to this file, and also import other style files */
-
-.card{
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-top: 10px;
-}
-.content{
-    background-image: url(assets/images/SHOP.svg);
-
-    background-size: 100%;
-   
-}
-
-.card_TBL{
-    margin-top: 10px;
-}
-.header{
-    height: 30px;
-    color: rgb(255, 81, 0)
-}
-.blue{
-    background-color: rgb(25, 19, 80);
-}
-.upload_icon {
-    font-size: 20px;
-    color: #ffffff;
-    background: #ff5100;
-    width: 171px;
-    padding-top: 2px;
-    height: 25px;
-   padding-left: 4px;
-    
-}
-.og{
-    background-color: rgb(255, 81, 0);
-}
-.container-fluid {
-    min-height: 92vh;
-}
-
-.allcard {
-    margin-top: 20px;
-    margin-bottom: 0px;
-    height: 100% !important;
-    background-color: #ffffff !important;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-.bc{
-height: 93vh !important;
-
-    background-color: #e3e3e3 !important;
-}
+// number off pagenation start css
 .page-item.disabled .page-link {
     color: #757575;
     pointer-events: none;
@@ -401,7 +388,79 @@ height: 93vh !important;
 .page-link {
     border-radius: 5px;
 }
+// number off pagenation end css
 
+// swal popup box in button start css
+.swal2-styled.swal2-confirm {
+    border: 0;
+    border-radius: 0.25em;
+    background: initial;
+    background-color: #2d2495 !important;
+    color: #fff;
+    font-size: 1em;
+}
+// swal popup box in button end css
+
+// ng select start import theme css or manual css
+
+@import "~@ng-select/ng-select/themes/default.theme.css";
+// ... or 
+@import "~@ng-select/ng-select/themes/material.theme.css";
+/* Importing Bootstrap SCSS file. */
+
+.ng-select .ng-select-container {
+    color: rgba(0,0,0,0.87);
+    align-items: baseline;
+    min-height: 39.5px !important;
+}
+
+.ng-select .ng-select-container {
+    color: #333;
+    background-color: #fff;
+     border-radius: 0px !important;
+    border: 0px  !important; 
+    min-height: 36px;
+    align-items: center;
+}
+
+.ng-select .ng-select-container .ng-value-container .ng-placeholder {
+    position: absolute;
+    top: 16px !important;
+    color: rgb(30 30 30);
+    transform-origin: left 0;
+    transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1),color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1),width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.ng-select.ng-select-single .ng-select-container .ng-value-container .ng-input {
+     top: 15px !important; 
+    left: 0;
+    padding-left: 0px !important;
+    padding-right: 50px;
+}
+
+.ng-select.ng-select-focused .ng-select-container .ng-value-container .ng-placeholder {
+   transform: translateY(-1.28125em) scale(0.75) perspective (100px) translateZ(0.001px);
+    color: #000000 !important;
+}
+
+.ng-select.ng-select-focused:not(.ng-select-opened)>.ng-select-container {
+    border-color: #0080ff00 !important;
+    box-shadow:inset 0 0px 0px rgb(0 0 0 / 0%), 000 0px rgba(0, 128, 255, 0) !important;
+}
+.ng-select.ng-select-single .ng-select-container .ng-clear-wrapper {
+    align-self: flex-end;
+    bottom: 3px;
+}
+.ng-select.ng-select-single .ng-select-container .ng-arrow-wrapper {
+    align-self: flex-end;
+    bottom: 5px;
+    padding: 0px;
+}
+// ng select end css
+
+@import '~bootstrap/scss/bootstrap';
+
+// ngbModel dorpdowre opne in css
 .modal {
     --bs-modal-zindex: 1055;
     --bs-modal-width: 1106px !important;
@@ -435,22 +494,7 @@ height: 93vh !important;
     overflow-y: auto;
     outline: 0;
 }
-
-.swal2-styled.swal2-confirm {
-    border: 0;
-    border-radius: 0.25em;
-    background: initial;
-    background-color: #2d2495 !important;
-    color: #fff;
-    font-size: 1em;
-}
-
-
-
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
-
-
 .cdk-global-overlay-wrapper, .cdk-overlay-container {
     z-index: 99999 !important;
  }
+// ngbModel dorpdowre end in css
